<resources>
    <string name="app_name">FarmInfoManager</string>
    <string name="connect_type">Content Type: </string>
    <string name="wifi">Wi-Fi</string>
    <string name="bt">BT</string>

    <string name="offline_map">Offline Map</string>
    <string name="city_search_hint">Input The City Name</string>
    <string name="city_list">City List</string>
    <string name="download_manager">Download Manager</string>

    <string name="mission_manager">Mission Manager</string>
    <string name="measure">Measure</string>
    <string name="device_settings">Device Settings</string>
    <string name="on_off">On/Off</string>
    <string name="exit">Exit</string>
    <string name="gps">GPS:</string>
    <string name="satellite_count">SNumber:</string>
    <string name="init_value_int">0</string>
    <string name="init_value_float">0.0</string>
    <string name="init_dop_value">0.000</string>
    <string name="init_coord_value">0.00000000</string>
    <string name="init_utc_time">00:00:00</string>
    <string name="posstate">POSState:</string>
    <string name="no_state">No Loc</string>
    <string name="fix_position">Position</string>
    <string name="fix_height">Height</string>
    <string name="single_point">Single</string>
    <string name="diff_state">Difference</string>
    <string name="sbas_state">SBAS</string>
    <string name="rtkf_state">RTKF</string>
    <string name="l1_int_state">L1_INT</string>
    <string name="rtk_state">RTK</string>
    <string name="utctime">Time:</string>
    <!-- Dilution of Precision -->
    <string name="gps_gdop">gdop:</string>
    <string name="gps_pdop">pdop:</string>
    <string name="gps_hdop">hdop:</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="add">Add</string>
    <string name="new_mission_title">New Mission</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="time">Time</string>
    <string name="site">Site</string>
    <string name="comments">Comments</string>
    <string name="delete">Delete</string>
    <string name="start_measure">Start Measure</string>
    <string name="no_link">No Link</string>
    <string name="lon_str">Longitude:</string>
    <string name="lat_str">Latitude:</string>
    <string name="hei_str">Height:</string>
    <string name="lon_label">Longitude</string>
    <string name="lat_label">Latitude</string>
    <string name="altitude_label">Altitude</string>
    <string name="barrier_height">Barrier Height</string>
    <string name="get_point">Get</string>
    <string name="please_add_point_first">Please Add Point First</string>
    <string name="del_point">Delete</string>
    <string name="serial_num">Number</string>
    <string name="l_dop">LDop:</string>
    <string name="v_dop">VDop:</string>
    <string name="h_dop">HDop:</string>
    <string name="not_applicable">N/A</string>
    <string name="native_gps">Native GPS</string>
    <string name="dot">Dot:</string>
    <string name="dot_sum">Dot Sum:</string>
    <string name="confirm">Confirm</string>
    <string name="end">End</string>
    <string name="characteristic">Characteristic</string>
    <string name="radius">Radius</string>
    <string name="get">Get</string>
    <string name="dot_out_of_range">Dot out of range</string>
    <string name="write_to_file_successfully">WayPoint info has been writen into file.</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="app_setting">Setting</string>
    <string name="menu_open">Open</string>
    <string name="menu_save">Save</string>
    <string name="menu_new">New Mission</string>
    <string name="save_mission_file">Save Mission File</string>
    <string name="open_mission_file">Open Mission File</string>
    <string name="new_folder">New Folder</string>
    <string name="no_file">No File</string>
    <string name="label_yes_no_dialog_dont_show">Don\'t show again.</string>
    <string name="label_enter_filename">Enter Filename</string>
    <string name="file_saved_success">File saved</string>
    <string name="file_saved_error">Error saving file</string>
    <string name="empty_place">  </string>

    <string name="btn_add">+</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>

    <string name="btn_complete">Complete</string>
    <string name="btn_close">Close</string>

    <!-- Preference String -->
    <string name="pref_connection_setting">Connection Setting</string>
    <string name="pref_connection_type">Telemetry Connection Type</string>
    <string name="pref_connection_type_summary">Which link to use to connect to the drone</string>
    <string name="pref_connection">Connection Preferences</string>
    <string name="pref_server">TCP Connection</string>
    <string name="pref_server_ip">Server IP</string>
    <string name="pref_server_port">Server PORT</string>
    <string name="pref_server_bt">BT Connection</string>
    <string name="pref_height_setting">Height Setting</string>
    <string name="pref_mobile_station_height">Mobile Station Height</string>
    <string name="pref_base_station_height">Base Station Height</string>

    <!-- Point Category String -->
    <string name="frame_point">Boundary Point</string>
    <string name="danger_point">Barrier Point</string>
    <string name="base_station_point">Base Station</string>

    <!-- This are three kind of danger point -->
    <string name="bypass_danger_poi">Bypass Point</string>
    <string name="climb_danger_poi">Climb Point</string>
    <string name="forward_danger_poi">Forward Point</string>

    <!-- About Mission Open and close -->
    <string name="cancel_label">Cancel</string>
    <string name="confirm_label">Confirm</string>
    <string name="selected_folder_label">Selected folder:</string>
    <string name="create_folder_label">Create folder</string>
    <string name="create_folder_msg">Create new folder with name "%1$s"?</string>
    <string name="create_folder_success">Created new folder</string>
    <string name="create_folder_error_no_write_access">Cannot write to this folder</string>
    <string name="create_folder_error_already_exists">Folder already exists</string>
    <string name="create_folder_error">Could not create folder</string>
    <string name="up_label">Up</string>
    <string name="input_file_name">File name</string>
    <string name="please_input_file_name">Please Input File Name</string>
    <string name="delete_point">Delete</string>
    <string name="editor_point">Editor</string>
    <string name="save_title">Save Mission</string>
    <string name="change_f_height">Change Flight Height</string>
    <string name="open_mission_success">Open Success</string>
    <string name="open_mission_failed">Open Fail</string>

    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_finish">Finish</string>

    <string name="offline_map_downloading">Downloading</string>
    <string name="offline_map_downloaded">Downloaded</string>
    <string name="down_ratio">%1$d%%</string>

</resources>