<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/id_new_mission"
        android:title="@string/new_mission_title"
        app:showAsAction="never" />
    <item android:id="@+id/id_mission_manager"
        android:title="@string/mission_manager"
        app:showAsAction="never" />
    <item android:id="@+id/id_measure"
        android:title="@string/measure"
        app:showAsAction="never" />
    <item android:id="@+id/id_device_settings"
        android:title="@string/device_settings"
        app:showAsAction="never" />
    <item android:id="@+id/id_on_off"
        android:title="@string/on_off"
        app:showAsAction="never" />
    <item android:id="@+id/id_exit"
        android:title="@string/exit"
        app:showAsAction="never" />
</menu>
