<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gpsInfoBackground">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/commonTextGPS"
            android:text="@string/lon_str"/>

        <TextView
            android:id="@+id/lon_value"
            style="@style/commonInfoGPS"/>

        <TextView
            style="@style/commonTextGPS"
            android:text="@string/lat_str"/>

        <TextView
            android:id="@+id/lat_value"
            style="@style/commonInfoGPS"/>

        <TextView
            style="@style/commonTextGPS"
            android:text="@string/hei_str"/>

        <TextView
            android:id="@+id/hei_value"
            style="@style/commonInfoGPS"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </LinearLayout>

</LinearLayout>