<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/mission_file_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/footer"
        android:hint="@string/input_file_name"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="20sp" />

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_alignParentTop="true"
            android:background="?android:attr/dividerVertical" />

        <View
            android:id="@+id/horizontalDivider"
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:background="?android:attr/dividerVertical" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@id/horizontalDivider"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/cancel_label" />

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/horizontalDivider"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/confirm_label" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/directoryInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <ImageButton
            android:id="@+id/btnNavUp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/borderless_button"
            android:contentDescription="@string/up_label"
            android:src="@drawable/navigation_up" />

        <TextView
            android:id="@+id/txtvSelectedFolderLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/btnNavUp"
            android:text="@string/selected_folder_label"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/txtvSelectedFolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtvSelectedFolderLabel"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toStartOf="@+id/btnCreateFolder"
            android:layout_toEndOf="@id/btnNavUp"
            android:ellipsize="start"
            android:scrollHorizontally="true"
            android:maxLines="1" />

        <ImageButton
            android:id="@+id/btnCreateFolder"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/borderless_button"
            android:contentDescription="@string/create_folder_label"
            android:src="@drawable/ic_action_create" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/btnNavUp"
            android:background="@color/bright_blue" />
    </RelativeLayout>

    <ListView
        android:id="@+id/directoryList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/mission_file_name"
        android:layout_below="@id/directoryInfo" />

    <TextView android:id="@+id/id_file_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="30sp"
        android:textColor="@color/dark_grey"
        android:visibility="gone"
        android:text="@string/no_file" />

</RelativeLayout>
